# smarty-ads-rs

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/dao/: ads_dao.rs  dyn_cfg.rs  mod.rs  redis_dao.rs
src/model/: mod.rs
src/service/: mod.rs  prodiction.rs
src/tests/: integration_test.rs
