[package]
name = "smarty-adserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.5.6", features=["headers"]}
tokio = {version = "1", features =["full"]} 
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
redis=  "0.21.5"
bb8-redis = "0.11.0"
tokio-cron-scheduler = "*"
chrono = {version = "0.4", features=["serde","rustc-serialize"]}
env_logger = "0.9.0"
log = "0.4.0"
moka = "0.9"
md5 = "0.7"
rand = "0.8"
metrics-exporter-prometheus = "0.10"
metrics = "0.19"



